Some certificate chain building fixes.  Some dependency fixes.